#10670: Address CodeRabbit review feedback on AGENTS.md
- Note Log4j 1.x end-of-life status and prohibit adding remote/JMS/
  socket appenders during a future migration; current appenders are
  console and rolling-file only.
- Fix the sample-app runtime command: add --enable-preview (classes
  are compiled with it) and split into a POSIX example (: separator,
  / paths) and a Windows example matching runJP2.bat's syntax,
  instead of one bash block mixing both.
- Remove the stale "develop is the active branch" claim in favor of
  the existing live defaultBranchRef verification command, to avoid
  two branch-name sources that can drift apart.

Addresses review comments on https://github.com/mosip/nfiq/pull/66

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>